# multiserialviewer

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
devTool/: devTool_1mbaud.sal  main.py
src/multiserialviewer/: __main__.py  __version__.py
src/multiserialviewer/application/: application.py  counterHandler.py  counterTableModel.py  proxyStyle.py  serialViewerController.py  serialViewerControllerPool.py  serialViewerSettings.py  settings.py  statisticsHandler.py  statisticsTableModel.py  watchHandler.py  watchTableModel.py
src/multiserialviewer/gui/: animatedScrollBarMover.py  autoscrollHandler.py  mainWindow.py  searchHandler.py  serialViewerCreateDialog.py  serialViewerSettingsWidget.py  serialViewerTextEdit.py  serialViewerWindow.py  statisticsWidget.py  textHighlighterSettingsDialog.py
src/multiserialviewer/gui_main/: mainWindow.py  settingsDialog.py  textHighlighterSettingsDialog.py
src/multiserialviewer/gui_viewer/: autoscrollHandler.py  counterWidget.py  searchHandler.py  searchWidget.py  serialViewerCreateDialog.py  serialViewerSettingsWidget.py  serialViewerTextEdit.py  serialViewerWindow.py  statisticsWidget.py  watchWidget.py
src/multiserialviewer/icons/: iconSet.py
src/multiserialviewer/serial_data/: serialConnectionSettings.py  serialDataProcessor.py  serialDataReceiver.py  serialDataStatistics.py  streamingTextExtractor.py
src/multiserialviewer/settings/: applicationSettings.py  counterSettings.py  serialViewerSettings.py  settings.py  watchSettings.py
src/multiserialviewer/text_highlighter/: textHighlighter.py  (+4 more)
tests/serial_data/: test_serialDataProcessor.py  test_serialDataReceiver.py  test_streamingTextExtractor.py
(+13 files in other folders)
